yaml/wordpress/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: wp.cloudgenius.co
      http:
        paths:
        - path: /
          backend:
            serviceName: wp
            servicePort: 80
  tls:
    - hosts:
        - "wp.cloudgenius.co"
      secretName: wp.cloudgenius.co
